--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="contacts">
             <a href="https://github.com/adarshroy9211"><i class='bx bxl-github'></i></a>
             <a href="https://www.youtube.com/@adarshgaming2003"><i class='bx bxl-youtube'></i></a>
-            <a href="royadarsh028@gmail.com"><i class='bx bx-mail-send'></i></a>
+            <a href="mailto:royadarsh028@gmail.com"><i class='bx bx-mail-send'></i></a>
             <a href="https://www.instagram.com/adarsh__roy__"><i class='bx bxl-instagram-alt'></i></a>
         </div>
     </section>
